[gd_scene load_steps=12 format=3 uid="uid://r8owuuwd38wu"]

[ext_resource type="Script" path="res://Menu/Escenas/MenuPrincipal.gd" id="1_4sog5"]
[ext_resource type="FontFile" uid="uid://b5glysunhn2en" path="res://Menu/Retro Gaming.ttf" id="2_bvjos"]
[ext_resource type="Script" path="res://Menu/Escenas/Historia.gd" id="3_xu5ky"]
[ext_resource type="Script" path="res://Menu/Escenas/Competitivo.gd" id="4_qshtn"]
[ext_resource type="Script" path="res://Menu/Escenas/Opciones.gd" id="5_gtm3a"]
[ext_resource type="Script" path="res://Menu/Escenas/Salir.gd" id="6_1kj2j"]
[ext_resource type="Script" path="res://Menu/Escenas/Video.gd" id="7_bttqa"]
[ext_resource type="Script" path="res://Menu/Escenas/Regresar.gd" id="8_tkkjn"]
[ext_resource type="Script" path="res://Menu/Escenas/Audio.gd" id="9_8k5h5"]
[ext_resource type="PackedScene" uid="uid://bacbrkhwlkyxt" path="res://Menu/Escenas/action_button.tscn" id="10_2hfuv"]
[ext_resource type="PackedScene" uid="uid://6l0827vdcfje" path="res://Menu/escena menu.tscn" id="11_8itty"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_4sog5")

[node name="UI" type="CanvasLayer" parent="."]

[node name="MainMenu" type="VBoxContainer" parent="UI"]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.5
offset_top = -68.0
offset_right = 75.5
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2

[node name="Historia" type="Button" parent="UI/MainMenu"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_bvjos")
theme_override_font_sizes/font_size = 50
text = "Modo Historia"
script = ExtResource("3_xu5ky")

[node name="Competitivo" type="Button" parent="UI/MainMenu"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_bvjos")
theme_override_font_sizes/font_size = 50
text = "Modo Competitivo"
script = ExtResource("4_qshtn")

[node name="Opciones" type="Button" parent="UI/MainMenu"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_bvjos")
theme_override_font_sizes/font_size = 50
text = "Opciones"
script = ExtResource("5_gtm3a")

[node name="Salir" type="Button" parent="UI/MainMenu"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_bvjos")
theme_override_font_sizes/font_size = 50
text = "Salir"
script = ExtResource("6_1kj2j")

[node name="Settings" type="TabContainer" parent="UI"]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Video" type="TabBar" parent="UI/Settings"]
layout_mode = 2
script = ExtResource("7_bttqa")

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Settings/Video"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -272.5
offset_top = -137.0
offset_right = 272.5
offset_bottom = 137.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Settings/Video/HBoxContainer"]
layout_mode = 2

[node name="WindowSize" type="Label" parent="UI/Settings/Video/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_bvjos")
theme_override_font_sizes/font_size = 40
text = "Window Size"

[node name="FullScreen" type="Label" parent="UI/Settings/Video/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_bvjos")
theme_override_font_sizes/font_size = 40
text = "FullScreen"

[node name="Borderless" type="Label" parent="UI/Settings/Video/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_bvjos")
theme_override_font_sizes/font_size = 40
text = "Borderless"

[node name="Vsync" type="Label" parent="UI/Settings/Video/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_bvjos")
theme_override_font_sizes/font_size = 40
text = "Vsync"

[node name="VBoxContainer2" type="VBoxContainer" parent="UI/Settings/Video/HBoxContainer"]
layout_mode = 2

[node name="WindowSize" type="OptionButton" parent="UI/Settings/Video/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_bvjos")
theme_override_font_sizes/font_size = 40
item_count = 4
selected = 3
popup/item_0/text = "1920 x 1080"
popup/item_0/id = 0
popup/item_1/text = "1280 x 720"
popup/item_1/id = 1
popup/item_2/text = "854 x 480"
popup/item_2/id = 2
popup/item_3/text = "Autom√°tico"
popup/item_3/id = 3

[node name="FullScreen" type="CheckBox" parent="UI/Settings/Video/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 45)
layout_mode = 2
size_flags_stretch_ratio = 0.0

[node name="Borderless" type="CheckBox" parent="UI/Settings/Video/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 45)
layout_mode = 2

[node name="Vsync" type="OptionButton" parent="UI/Settings/Video/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_bvjos")
theme_override_font_sizes/font_size = 40
item_count = 4
selected = 1
popup/item_0/text = "Disabled"
popup/item_0/id = 0
popup/item_1/text = "Enabled"
popup/item_1/id = 1
popup/item_2/text = "Adaptive"
popup/item_2/id = 2
popup/item_3/text = "Mailbox"
popup/item_3/id = 3

[node name="Regresar" type="Button" parent="UI/Settings/Video"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -77.0
offset_top = -31.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_bvjos")
theme_override_font_sizes/font_size = 40
text = "Regresar"
script = ExtResource("8_tkkjn")

[node name="Audio" type="TabBar" parent="UI/Settings"]
visible = false
layout_mode = 2
script = ExtResource("9_8k5h5")

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Settings/Audio"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.5
offset_top = -38.5
offset_right = 29.5
offset_bottom = 38.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Settings/Audio/HBoxContainer"]
layout_mode = 2

[node name="Master" type="Label" parent="UI/Settings/Audio/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_bvjos")
theme_override_font_sizes/font_size = 40
text = "Master"

[node name="Music" type="Label" parent="UI/Settings/Audio/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_bvjos")
theme_override_font_sizes/font_size = 40
text = "Music"

[node name="SFX" type="Label" parent="UI/Settings/Audio/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_bvjos")
theme_override_font_sizes/font_size = 40
text = "SFX"

[node name="VBoxContainer2" type="VBoxContainer" parent="UI/Settings/Audio/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="Master" type="HSlider" parent="UI/Settings/Audio/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
max_value = 1.0
step = 0.05

[node name="Music" type="HSlider" parent="UI/Settings/Audio/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
max_value = 1.0
step = 0.05

[node name="SFX" type="HSlider" parent="UI/Settings/Audio/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
max_value = 1.0
step = 0.05

[node name="Regresar" type="Button" parent="UI/Settings/Audio"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -77.0
offset_top = -31.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_bvjos")
theme_override_font_sizes/font_size = 40
text = "Regresar"
script = ExtResource("8_tkkjn")

[node name="Controles" type="TabBar" parent="UI/Settings"]
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Settings/Controles"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.5
offset_top = -52.0
offset_right = 28.5
offset_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Settings/Controles/HBoxContainer"]
layout_mode = 2

[node name="Up" type="Label" parent="UI/Settings/Controles/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("2_bvjos")
theme_override_font_sizes/font_size = 40
text = "UP"

[node name="Down" type="Label" parent="UI/Settings/Controles/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("2_bvjos")
theme_override_font_sizes/font_size = 40
text = "DOWN"

[node name="Left" type="Label" parent="UI/Settings/Controles/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("2_bvjos")
theme_override_font_sizes/font_size = 40
text = "LEFT"

[node name="Right" type="Label" parent="UI/Settings/Controles/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("2_bvjos")
theme_override_font_sizes/font_size = 40
text = "RIGHT"

[node name="VBoxContainer2" type="VBoxContainer" parent="UI/Settings/Controles/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="ActionButton" parent="UI/Settings/Controles/HBoxContainer/VBoxContainer2" instance=ExtResource("10_2hfuv")]
layout_mode = 2
size_flags_vertical = 7
theme_override_fonts/font = ExtResource("2_bvjos")
theme_override_font_sizes/font_size = 40

[node name="ActionButton2" parent="UI/Settings/Controles/HBoxContainer/VBoxContainer2" instance=ExtResource("10_2hfuv")]
layout_mode = 2
size_flags_vertical = 7
theme_override_fonts/font = ExtResource("2_bvjos")
theme_override_font_sizes/font_size = 40
action = "ui_down"

[node name="ActionButton3" parent="UI/Settings/Controles/HBoxContainer/VBoxContainer2" instance=ExtResource("10_2hfuv")]
layout_mode = 2
size_flags_vertical = 7
theme_override_fonts/font = ExtResource("2_bvjos")
theme_override_font_sizes/font_size = 40
action = "ui_left"

[node name="ActionButton4" parent="UI/Settings/Controles/HBoxContainer/VBoxContainer2" instance=ExtResource("10_2hfuv")]
layout_mode = 2
size_flags_vertical = 7
theme_override_fonts/font = ExtResource("2_bvjos")
theme_override_font_sizes/font_size = 40
action = "ui_right"

[node name="Regresar" type="Button" parent="UI/Settings/Controles"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -77.0
offset_top = -31.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_bvjos")
theme_override_font_sizes/font_size = 40
text = "Regresar"
script = ExtResource("8_tkkjn")

[node name="ParallaxBackground" parent="." instance=ExtResource("11_8itty")]

[connection signal="pressed" from="UI/MainMenu/Historia" to="UI/MainMenu/Historia" method="_on_pressed"]
[connection signal="pressed" from="UI/MainMenu/Competitivo" to="UI/MainMenu/Competitivo" method="_on_pressed"]
[connection signal="pressed" from="UI/MainMenu/Opciones" to="UI/MainMenu/Opciones" method="_on_pressed"]
[connection signal="pressed" from="UI/MainMenu/Salir" to="UI/MainMenu/Salir" method="_on_pressed"]
[connection signal="item_selected" from="UI/Settings/Video/HBoxContainer/VBoxContainer2/WindowSize" to="UI/Settings/Video" method="_on_window_size_item_selected"]
[connection signal="toggled" from="UI/Settings/Video/HBoxContainer/VBoxContainer2/FullScreen" to="UI/Settings/Video" method="_on_full_screen_toggled"]
[connection signal="toggled" from="UI/Settings/Video/HBoxContainer/VBoxContainer2/Borderless" to="UI/Settings/Video" method="_on_borderless_toggled"]
[connection signal="item_selected" from="UI/Settings/Video/HBoxContainer/VBoxContainer2/Vsync" to="UI/Settings/Video" method="_on_vsync_item_selected"]
[connection signal="pressed" from="UI/Settings/Video/Regresar" to="UI/Settings/Video/Regresar" method="_on_pressed"]
[connection signal="value_changed" from="UI/Settings/Audio/HBoxContainer/VBoxContainer2/Master" to="UI/Settings/Audio" method="_on_master_value_changed"]
[connection signal="value_changed" from="UI/Settings/Audio/HBoxContainer/VBoxContainer2/Music" to="UI/Settings/Audio" method="_on_music_value_changed"]
[connection signal="value_changed" from="UI/Settings/Audio/HBoxContainer/VBoxContainer2/SFX" to="UI/Settings/Audio" method="_on_sfx_value_changed"]
[connection signal="pressed" from="UI/Settings/Audio/Regresar" to="UI/Settings/Audio/Regresar" method="_on_pressed"]
[connection signal="pressed" from="UI/Settings/Controles/Regresar" to="UI/Settings/Controles/Regresar" method="_on_pressed"]
